# SBML_odeSolver

./: .gitignore  AUTHORS  BUGFIXES  ChangeLog  INSTALL  INSTALL.txt  INSTALL_SOLARIS  INSTALL_WIN.txt  KNOWN_BUGS  Makefile.am  OUTLOOK  README  SOSlib.doxy  TODO  VERSION.txt  autogen.sh  configure  configure.ac  configure.in  configure.txt  configure_sundials.txt  cvode_failures.txt  cvode_statistics.txt  examples.doxy  odeSolver.doxy
Perlen/: AddLegend.pl
SOS_Win32/: SOS_Win32.sln
SOS_Win32/SBW_odeSolver/: SBWOdeSolver.cpp  SBWOdeSolver.h  SBW_odeSolver.vcproj  main.c
SOS_Win32/SOSLib/: SOSLib.vcproj
SOS_Win32/SOS_CommandLine/: SOS_CommandLine.vcproj
Test/: MAPK.xml  simple.sh
Test/testsuite/: README  odeSolver-wrapper-once.pl  odeSolver-wrapper.bsh  workingtests.txt
Win32/: README.txt  README_FOR_RELEASE.txt  TODO.txt  makerelease.bat
Win32/CompleteSOSLib/: CompleteSOSLib.sln
Win32/Examples/ASTIndexTest/: .cvsignore  ASTIndexTest.sln  ASTIndexTest.vcproj
Win32/Examples/ChangingIntegratorInstance/: ChangingIntegratorInstance.sln  ChangingIntegratorInstance.vcproj
Win32/Examples/ChangingParameterIntegrator/: ChangingParameterIntegrator.sln  ChangingParameterIntegrator.vcproj
Win32/Examples/IntegratorInstance/: .cvsignore  IntegratorInstance.sln  IntegratorInstance.vcproj
Win32/Examples/ParameterScanner/: .cvsignore  ParameterScanner.sln  ParameterScanner.vcproj
Win32/Examples/Sense/: Sense.sln
Win32/Examples/Sense/Sense/: Sense.vcproj
Win32/Examples/Sensitivity/: Sensitivity.sln  Sensitivity.vcproj
Win32/Examples/SharingIntegratorInstance/: SharingIntegratorInstance.sln  SharingIntegratorInstance.vcproj
Win32/Examples/TwinIntegratorInstance/: TwinIntegratorInstance.sln  TwinIntegratorInstance.vcproj
Win32/SBML_odeSolver/: .cvsignore  SBML_odeSolver.sln
Win32/SBML_odeSolver/SBML_odeSolver/: ReadMe.txt  SBML_odeSolver.cpp  SBML_odeSolver.vcproj
Win32/SBML_odeSolver/include/: config.h  getopt.h
Win32/SBML_odeSolverApp/: SBML_odeSolverApp.sln
Win32/SBML_odeSolverApp/SBML_odeSolverApp/: SBML_odeSolverApp.vcproj  my_getopt.c  my_getopt.h
Win32/WinCVODE/: WinCVODE.sln
Win32/WinCVODE/CVODE/: Makefile  README
Win32/WinCVODE/CVODE/doc/: addenda.doc  cvuguide.ps
Win32/WinCVODE/CVODE/include/: band.h  cvband.h  cvbandpre.h  cvdense.h  (+9 more)
Win32/WinCVODE/WinCVODE/: ReadMe.txt  WinCVODE.cpp  WinCVODE.h  WinCVODE.vcproj
Win32/WinCVODE/sundials/: INSTALL_NOTES  Makefile  Makefile.in  README  config.h  config.hin  config.status  configure  libtool
Win32/binary/: genplotscript.awk
bindings/: Makefile.am  README
bindings/R/: interface.c  interface.h
bindings/perl/: LibODES.i  Makefile.PL.in  Makefile.am
bindings/perl/t/: 01__LoadModule.t  02__Integrate.t
bindings/swig/: Makefile.am  libodes.i
config/: ax_compare_version.m4  cvode.m4  fpic.m4  grace.m4  graphviz.m4  sbml.m4  sundials.m4  tcc.m4
doc/: Makefile.am  README  SBML_odeSolver.1.in  libODES.texinfo
examples/: ASTIndexTest.c  ASTgetIndexTest.c  ChangingIntegratorInstance.c  ChangingParameterIntegrator.c  FIMtest.c  MAPK.linobjfun  MAPK.objfun  MAPK.xml  MAPK_10000pt.objfun  MAPK_1000pt.objfun  MAPK_100pt.objfun  MAPK_10pt.objfun  MAPK_withData.objfun  Makefile.am  Makefile.batch  Makefile.integrate  ParameterScanner.c  README  Sense.c  SharingIntegratorInstance.c  TwinIntegratorInstance.c  adj_sensitivity.c  adjsenstest.c  adjsenstest_ContDiscData.c  analyzeJacobian.c  analyzeSensitivity.c  basic-model1-forward-l2.xml  basic.xml  batch_integrate.c  bistability.c  definedTimeSeries.c  events-1-event-1-assignment-l2.xml  events-2-events-1-assignment-l2.xml  findRoot.c  huang96.xml  integrate.c  integrateODEs.c  printODEModel.c  repressilator.objfun  repressilator.xml  (+8 more)
examples/.deps/: batch_integrate.Po  integrate.Po
odeSolver/: Makefile.am  commandLine.c  commandLine.h  getopt.c  interactive.c  interactive.h  main.c  options.c  options.h  printModel.c  printModel.h
sbml/: sbml-l1v1.xsd  sbml-l1v2.xsd
scripts/: gnuplotscript.awk  xmgracefile.pl
src/: ASTIndexNameNode.c  ASTIndexNameNode.cpp  Makefile.am  arithmeticCompiler.c  batchIntegrator.c  batchIntegrator.h  charBuffer.c  charBuffer.cpp  commandLine.c  compiler.c  cvodeData.c  cvodeSolver.c  cvodedata.c  cvodedata.h  cvodesSolver.c  daeSolver.c  drawGraph.c  drawGraph.h  evaluateAST.c  integratorInstance.c  integratorSettings.c  interactive.c  interactive.h  interpol.c  libODES.pc.in  main.c  modelSimplify.c  modelSimplify.h  nullSolver.c  odeConstruct.c  odeConstruct.h  odeConstructUsingOptions.c  odeIntegrate.c  odeIntegrate.h  odeModel.c  odeSolver.c  odeSolver.h  options.c  options.h  printModel.c  (+12 more)
src/private/: data.c  data.h  error.c  error.h  macro.h
src/sbmlsolver/: ASTIndexNameNode.h  CvodeSettings.h  arithmeticCompiler.h  batchIntegrator.h  charBuffer.h  commandLine.h  compiler.h  cvodeData.h  cvodeDataStruct.h  cvodeSettings.h  cvodeSettingsStruct.h  cvodeSolver.h  cvodedata.h  cvodedatatype.h  cvodesettingsdatatype.h  daeSolver.h  drawGraph.h  exportdefs.h  integratorInstance.h  integratorSettings.h  interactive.h  interpol.h  modelSimplify.h  nullSolver.h  odeConstruct.h  odeConstructUsingOptions.h  odeIntegrate.h  odeModel.h  odeModelStruct.h  odeSolver.h  odemodeldatatype.h  options.h  printModel.h  processAST.h  sbml.h  sbmlResults.h  sbmlUsingOptions.h  sensSolver.h  solverError.h  util.h  (+1 more)
src/sbmlsolver/ASTCompiler/: Makefile  arithmeticCompiler.c  arithmeticCompilerTest.c  interfaceSimulation.c
tutorial/: Goodwin_SomoS.xml  MAPK-l2.xml  MAPK.xml  Makefile  Makefile.am  evaluateast.c  integrate.c  integrate.pl  integrateODES.pl  integratorinstance.c  odemodel.c  setvariablevalue.c
unittest/: Makefile.am  main.c  test_ASTIndexNameNode.c  test_charBuffer.c  test_cvodeData.c  test_cvodeSolver.c  test_daeSolver.c  test_integratorInstance.c  test_integratorSettings.c  test_interpol.c  test_modelSimplify.c  test_nullSolver.c  test_odeConstruct.c  test_odeModel.c  test_odeSolver.c  test_processAST.c  test_sbml.c  test_sbmlResults.c  test_sensSolver.c  test_solverError.c  test_util.c  unittest.h
(+218 files in other folders)
