# $Id: Makefile.am,v 1.29 2007/09/28 13:41:49 raimc Exp $
## 
## This library is free software; you can redistribute it and/or modify it
## under the terms of the GNU Lesser General Public License as published
## by the Free Software Foundation; either version 2.1 of the License, or
## any later version.
## 
## This library is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY, WITHOUT EVEN THE IMPLIED WARRANTY OF
## MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE. The software and
## documentation provided hereunder is on an "as is" basis, and the
## authors have no obligations to provide maintenance, support,
## updates, enhancements or modifications.  In no event shall the
## authors be liable to any party for direct, indirect, special,
## incidental or consequential damages, including lost profits, arising
## out of the use of this software and its documentation, even if the
## authors have been advised of the possibility of such damage.  See
## the GNU Lesser General Public License for more details.
## 
## You should have received a copy of the GNU Lesser General Public License
## along with this library; if not, write to the Free Software Foundation,
## Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
## 
## The original code contained here was initially developed by:
## 
##     Christoph Flamm
## 
## Contributor(s):
##     Rainer Machne
##
##if MAKE_BINDINGS
##   SUBDIRS = src odeSolver bindings
##else

   SUBDIRS = src odeSolver

##endif
EXTRA_DIST = Win32/* \
             OUTLOOK \
             SOSlib.doxy \
	     odeSolver.doxy \
             odeSolver/*.c \
             odeSolver/*.h \
             odeSolver/Makefile.am \
             scripts/*.pl \
             scripts/*.awk \
             sbml/*.xsd \
             doc/README \
             Test/simple.sh \
	     Test/testsuite/README \
             Test/testsuite/odeSolver-wrapper.bsh \
             Test/testsuite/odeSolver-wrapper-once.pl \
             Test/testsuite/workingtests.txt \
             examples/README \
	     examples/MAPK.xml \
             examples/basic-model1-forward-l2.xml \
	     examples/*.c \
	     examples/*objfun \
	     examples/*pt.dat \
             examples/Makefile.am \
             examples/Makefile.in \
	     examples/Makefile.batch \
             examples/Makefile.integrate \
             tutorial/Makefile \
             tutorial/*.c \
             tutorial/*.pl \
             tutorial/*.xml

